# LinkedinOutreach-deploy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LOGGING.md  MIGRATION_SUMMARY.md  README.md  SECURITY.md  SUPABASE_SETUP.md  TEST_REPORT.md  app_refactor.md  docker-compose.yaml  docker-compose.yml  outreach_degura.txt  package-lock.json  package.json  run_agent.sh  run_all.sh  run_scraper.sh  run_sender.sh  setup_python.sh  view_logs.sh
agents/: architecture.md  code_map.md
bridgecode/: EYE.md  INSTRUCT.md  LIRA.md  architect.md  negentropy.md  plan-code-debug.md  senior.md
docker/: Caddyfile  proxy.Dockerfile
mcp-server/: .env.example  README.md  ai_client.py  example_pool.py  prompt.txt  prompt_followup.txt  prompt_process.txt  prompt_vernetzung.txt  pyproject.toml  run_agent.py  run_followup_agent.py  server.py  test_ai_client.py  test_followup_agent.py  test_reply_drafting.py  tools.py
mcp-server/linkedin_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/scraper/: README.md  auth.json  auth.json.example  auth.py  pyproject.toml  scraper.py  test_connect_request_confirmation.py  test_inbox_reply_detection.py
workers/scraper/linkedin_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/sender/: README.md  auth.json  monitor.py  pyproject.toml  sender.py  sequence_render.py  test_message_only_queue.py  test_nudge_gate.py  test_sales_navigator_routing.py  test_sender.py  test_sequence_messages.py  test_sequence_render.py
workers/sender/linkedin_sender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+187 files in other folders)
