[project]
name = "linkedin-mcp-server"
version = "0.1.0"
description = "MCP server connecting Gemini and Supabase for outreach drafts"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.0.5",
    "supabase>=2.4.0",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
py-modules = [
    "server",
    "run_agent",
    "run_followup_agent",
    "ai_client",
    "tools",
]

[tool.black]
line-length = 100
